# soniq

./: .clang-format  .gitignore  CMakeLists.txt  README.md  test.sh
include/: audio_processing.hpp  read_wav.hpp  readwav.hpp  visualise_data.hpp
src/: audio_processing.cpp  main.cpp  read_audio.cpp  read_wav.cpp  readwav.hpp  visualise_data.cpp
